still there is problem with overlaping fixed header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,8 +27,8 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-  width: fit-content;
-  float: right;
+  //width: fit-content;
+  //float: right;
 }
 .social-nav{
   display: flex;
